// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dynamic import (string template + relative paths) 1`] = `
"
import(\`../../base/\${page}\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _importCss = _interopRequireDefault(require(\\"babel-plugin-dual-import/importCss.js\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

Promise.all([import( /* webpackChunkName: 'base/[request]' */\`../../base/\${page}\`), _importCss(\`base/\${page}\`)]).then(proms => proms[0]);
"
`;

exports[`dynamic import (string template - dynamic at 1st segment) 1`] = `
"
import(\`./\${page}\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _importCss = _interopRequireDefault(require(\\"babel-plugin-dual-import/importCss.js\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

Promise.all([import( /* webpackChunkName: '[request]' */\`./\${page}\`), _importCss(\`\${page}\`)]).then(proms => proms[0]);
"
`;

exports[`dynamic import (string template) 1`] = `
"
import(\`./base/\${page}\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _importCss = _interopRequireDefault(require(\\"babel-plugin-dual-import/importCss.js\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

Promise.all([import( /* webpackChunkName: 'base/[request]' */\`./base/\${page}\`), _importCss(\`base/\${page}\`)]).then(proms => proms[0]);
"
`;

exports[`static import (string template + relative paths) 1`] = `
"
import(\`../../base\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _importCss = _interopRequireDefault(require(\\"babel-plugin-dual-import/importCss.js\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

Promise.all([import( /* webpackChunkName: 'base' */\`../../base\`), _importCss(\`base\`)]).then(proms => proms[0]);
"
`;

exports[`static import (string template) 1`] = `
"
import(\`./base\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _importCss = _interopRequireDefault(require(\\"babel-plugin-dual-import/importCss.js\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

Promise.all([import( /* webpackChunkName: 'base' */\`./base\`), _importCss(\`base\`)]).then(proms => proms[0]);
"
`;

exports[`static import (with file extension) 1`] = `
"
import(\\"./Foo.js\\")

      ↓ ↓ ↓ ↓ ↓ ↓

var _importCss = _interopRequireDefault(require(\\"babel-plugin-dual-import/importCss.js\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

Promise.all([import( /* webpackChunkName: 'Foo' */\\"./Foo.js\\"), _importCss(\\"Foo\\")]).then(proms => proms[0]);
"
`;

exports[`static import (with relative paths) 1`] = `
"
import(\\"../../Foo\\")

      ↓ ↓ ↓ ↓ ↓ ↓

var _importCss = _interopRequireDefault(require(\\"babel-plugin-dual-import/importCss.js\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

Promise.all([import( /* webpackChunkName: 'Foo' */\\"../../Foo\\"), _importCss(\\"Foo\\")]).then(proms => proms[0]);
"
`;

exports[`static import 1`] = `
"
import(\\"./Foo\\")

      ↓ ↓ ↓ ↓ ↓ ↓

var _importCss = _interopRequireDefault(require(\\"babel-plugin-dual-import/importCss.js\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

Promise.all([import( /* webpackChunkName: 'Foo' */\\"./Foo\\"), _importCss(\\"Foo\\")]).then(proms => proms[0]);
"
`;
